[tool.poetry]
name = "test-desuyo"
version = "0.1.0"
description = ""
authors = ["'Yuji.K' <'yujikagsigkomi@gmail.com'>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.3.0"
pytest = "^8.3.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


[tool.isort]
profile = "black"
line_length = 79
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Library"
import_heading_firstparty = "First Party Library"
import_heading_localfolder = "Local Library"
multi_line_output = 3
include_trailing_comma = true